5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4422/executions/1800_2569.log
== TEST (2019-06-12 15:36:39) 
-- CODE:
from math import*
from numpy import*

x = array(eval(input("vai": )))

i = 0

for y in x:
	i = i + (y - (sum(x)/size(x)))**2
i = sqrt(i/size(v) - 1)
print(round(i, 3))


-- ERROR:
File "XXXX", line 4
    x = array(eval(input("vai": )))
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:36:54) 
-- CODE:
from math import*
from numpy import*

x = array(eval(input("vai": )))

i = 0

for y in x:
	i = i + (y - (sum(x)/size(x)))**2
i = sqrt(i/size(v) - 1)
print(round(i, 3))


-- ERROR:
File "XXXX", line 4
    x = array(eval(input("vai": )))
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:37:34) 
-- CODE:
from math import*
from numpy import*
x = array(eval(input("vai: ")))

i = 0

for y in x:
	i = i + (y - (sum(x)/size(x)))**2
i = sqrt(i/size(v) - 1)
print(round(i, 3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:38:00) 
-- CODE:
from math import*
from numpy import*
x = array(eval(input("vai: ")))

i = 0

for y in x:
	i = i + (y - (sum(x)/size(x)))**2
i = sqrt(i/size(x) - 1)
print(round(i, 3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:38:29) 
-- CODE:
from math import*
from numpy import*
x = array(eval(input("vai: ")))

i = 0

for y in x:
	i = i + (y - (sum(x)/size(x)))**2
i = sqrt(i/size(x) - 1)
print(round(i, 3))


-- EXECUTION TIME:
1.22845
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
97.038
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
19.228
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
nan
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:38:59) 
-- CODE:
from math import*
from numpy import*
x = array(eval(input("vai: ")))

b = sum(x)/size(x)
i = 0

for y in x:
	i = i + (y - b)**2
i = sqrt((i/size(x)) - 1)
print(round(i, 3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:44:02) 
-- CODE:
from math import*
from numpy import*
x = array(eval(input("vai: ")))
b = sum(x)/size(x)
i = 0for y in x:
	i = i + (y - b)**2
i = ((i/size(x)) - 1)**1/2
print(round(i, 3))


-- ERROR:
File "XXXX", line 5
    i = 0for y in x:
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:44:14) 
-- CODE:
from math import*
from numpy import*
x = array(eval(input("vai: ")))
b = sum(x)/size(x)
i = for y in x:
	i = i + (y - b)**2
i = ((i/size(x)) - 1)**1/2
print(round(i, 3))


-- ERROR:
File "XXXX", line 5
    i = for y in x:
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:44:20) 
-- CODE:
from math import*
from numpy import*
x = array(eval(input("vai: ")))
b = sum(x)/size(x)
for y in x:
	i = i + (y - b)**2
i = ((i/size(x)) - 1)**1/2
print(round(i, 3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:44:30) 
-- CODE:
from math import*
from numpy import*
x = array(eval(input("vai: ")))
b = sum(x)/size(x)
i = 0
for y in x:
	i = i + (y - b)**2
i = ((i/size(x)) - 1)**1/2
print(round(i, 3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:45:21) 
-- CODE:
from math import*
from numpy import*
x = array(eval(input("vai: ")))
b = sum(x)/size(x)
i = 0
for y in x:
	i = i + (y - b)**2
i = sqrt((i/size(x))-1)
print(round(i, 3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 16:09:34) 
-- CODE:
from math import*
from numpy import*
x = array(eval(input("vai: ")))
b = sum(x)/size(x)
i = 0
for y in x:
	i = i + (y - b)**2
i = ((i/size(x))-1)**(1/2)
print(round(i, 3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 16:12:06) 
-- CODE:
from numpy import *
from math import *
v = array(eval(input("vai: ")))
b = sum(v)/size(v)
i = 0
for y in v:
	i = i + (y-b)**2
i = sqrt(i/(size(v) - 1))
print(round(i, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 16:12:21) 
-- CODE:
from numpy import *
from math import *
v = array(eval(input("vai: ")))
b = sum(v)/size(v)
i = 0
for y in v:
	i = i + (y-b)**2
i = sqrt(i/(size(v) - 1))
print(round(i, 3))

-- EXECUTION TIME:
1.08765
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.498
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
